--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
         <base href="/">
         <meta name="theme-color" content="#307DAC" />
         <meta property="fb:app_id" content="" />
-        <meta property="og:site_name" content="https://read.splitz.com.br/" />
+        <meta property="og:site_name" content="https://sergiocabral.com/squirt/" />
         <meta property="og:title" content="Read quickly" />
         <meta property="og:description" content="Read more, read fast with squirt.io" />
         <meta property="og:locale" content="en_US" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://read.splitz.com.br/" />
-        <meta property="og:image" content="https://read.splitz.com.br/favicon.png" />
+        <meta property="og:url" content="https://sergiocabral.com/squirt/" />
+        <meta property="og:image" content="https://sergiocabral.com/squirt/favicon.png" />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="256" />
         <meta property="og:image:height" content="256" />
         <meta property="og:image:alt" content="Read quickly" />
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="shortcut icon" href="favicon.png" />
         <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -120,9 +120,25 @@
                 });
             };
 
+            const stampVersion = async () => {
+                var localExecution = location.href.indexOf('file://') === 0;
+                var version = "v0.0.0";
+                if (!localExecution) {
+                    var response = await fetch("VERSION");
+                    var text = await response.text();
+                    version = text.trim().replace("#BUILD#", "x");
+                }
+                var el = document.createElement("div");
+                el.id = "version";
+                el.innerHTML = version;
+                el.title = "Version of this web app.";
+                document.body.append(el);
+            };
+
             document.addEventListener('DOMContentLoaded', (e) => {
                 resizeTextarea();
                 setEvents();
+                stampVersion();
             });
 
             window.addEventListener('resize', (e) => {
@@ -180,6 +196,19 @@
                 font-family: 'Mali';
                 font-size: 120%;
                 padding: 6px 9px;
+            }
+            #version {
+                position: fixed;
+                left: 30px;
+                bottom: 30px;
+                z-index: 1000;
+                background-color: #DFDFDF;
+                padding: 3px 6px;
+                font-size: 10px;
+                box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.3);
+                border-radius: 100%;
+                color: gray;
+                opacity: 0.5;
             }
         </style>
     </head>
